--- a/app/views/authors/edit.html.haml
+++ b/app/views/authors/edit.html.haml
@@ -1,4 +1,4 @@
-- @title = "Radiant CMS Extension Registry Profile"
+- @title = "ChiliProject Plugin Registry Profile"
 - @h1 = "Edit Your Profile"
 - @selected = :profile
 
