--- a/app/views/authors/index.html.haml
+++ b/app/views/authors/index.html.haml
@@ -1,8 +1,8 @@
-- @title = "Radiant CMS Extension Authors"
-- @h1 = "Extension Authors"
+- @title = "ChiliProject Plugin Authors"
+- @h1 = "Plugin Authors"
 - @selected = :authors
 
-.records_count= record_count_for @authors, Author, :extension_authors_count
+.records_count= record_count_for @authors, Author, :plugin_authors_count
 
 = pagination_for @authors
 
