--- a/app/views/authors/new.html.haml
+++ b/app/views/authors/new.html.haml
@@ -1,4 +1,4 @@
-- @title = "Radiant CMS Extension Registry Sign Up"
+- @title = "ChiliProject Plugin Registry Sign Up"
 - @h1 = "Sign Up"
 - @selected = :signup
 
