--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,14 +4,14 @@
     %title= @title
     = stylesheet_link_tag "screen"
     = javascript_include_tag :defaults
-    %link{:href => "/extensions.atom", :rel => "alternate", :type => "application/atom+xml", :title => "Radiant Extension Registry"}
+    %link{:href => extensions_path(:format => :atom, :rel => "alternate", :type => "application/atom+xml", :title => "Radiant Extension Registry"}
   %body{:id => "#{@controller.controller_name}_#{@controller.action_name}"}
     #header_wrapper
       #header
         #logo 
           .title Radiant CMS
           .subtitle Extension Registry
-          .parent_site= link_to "RadiantCMS.org", "http://radiantcms.org"
+          .parent_site= link_to "ChiliProject.org", "http://www.chiliproject.org"
     #navigation_wrapper
       #navigation
         .account_links
@@ -26,8 +26,8 @@
         %ul.primary_links
           %li#index_link{:class => ("here" if @selected == :home)}
             = link_to "Home", root_path
-          %li#index_link{:class => ("here" if @selected == :extensions)}
-            = link_to "Extensions", extensions_path
+          %li#index_link{:class => ("here" if @selected == :plugins)}
+            = link_to "Plugins", plugins_path
           %li#authors_link{:class => ("here" if @selected == :authors)}
             = link_to "Authors", authors_path
           %li#search_link{:class => ("here" if @selected == :search)}
@@ -53,18 +53,10 @@
     #footer_wrapper
       #footer
         %p
-          The <a href="http://github.com/radiant/radiant-extension-registry">source code</a> for this website is available on GitHub.
-          Contact us on the <a href="http://radiantcms.org/mailing-list">Radiant CMS mailing list</a> if you are interested in contributing, or just send us a pull request.
-          Please direct bug reports, feature requests, and comments to the GitHub <a href="http://github.com/radiant/radiant-extension-registry/issues">issue tracker</a>.
-        %p
-          Hosting is graciously provided by the kind folks at <a href="http://avlux.net">AVLUX</a>.
+          The <a href="https://github.com/chiliproject/extension-registry">source code</a>
+          for this website is available on GitHub. Contact us on the 
+          <a href="https://www.chiliproject.org/projects/chiliproject/boards">ChiliProject Forums</a>
+          if you are interested in contributing, or just send us a pull request.
+          Please direct bug reports, feature requests, and comments to the <a href="https://www.chiliproject.org/projects/chiliproject/issues">issue tracker</a>.
         %p
           = "Copyright &copy; 2008&#8211;#{Date.today.year} #{ link_to 'John W. Long', 'http://wiseheartdesign.com' } and #{ link_to 'Sean Cribbs', 'http://seancribbs.com' }."
-    :javascript
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    :javascript
-      try {
-        var pageTracker = _gat._getTracker("UA-301205-6");
-        pageTracker._trackPageview();
-      } catch(err) {}
